--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -18,7 +18,8 @@
 
 @font-face {
 	font-family: 'National 2 Web';
-	src: url('https://pudding.cool/assets/fonts/national/National2Web-Regular.woff2') format('woff2');
+	src: url('/assets/fonts/national/National2Web-Regular.woff2') format('woff2'),
+	url('/assets/fonts/national/National2Web-Regular.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 	font-stretch: normal;
@@ -27,95 +28,20 @@
 
 @font-face {
 	font-family: 'National 2 Web';
-	src: url('https://pudding.cool/assets/fonts/national/National2Web-Bold.woff2') format('woff2');
+	src: url('/assets/fonts/national/National2Web-Bold.woff2') format('woff2'),
+	url('/assets/fonts/national/National2Web-Bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
 	font-stretch: normal;
 	font-display: swap;
 }
 
-/*
-********************
-	National Narrow
-********************
-*/
-
-/*
 @font-face {
-	font-family: 'National 2 Narrow Web';
-	src: url('https://pudding.cool/assets/fonts/national/National2NarrowWeb-Extralight.woff2') format('woff2');
-	font-weight: 200;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: 'National 2 Narrow Web';
-	src: url('https://pudding.cool/assets/fonts/national/National2NarrowWeb-Regular.woff2') format('woff2');
+	font-family: 'Recoleta Regular';
+	src: url('/assets/fonts/recoleta/recoleta.woff2') format('woff2'),
+	url('/assets/fonts/recoleta/recoleta.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 	font-stretch: normal;
 	font-display: swap;
 }
-
-@font-face {
-	font-family: 'National 2 Narrow Web';
-	src: url('https://pudding.cool/assets/fonts/national/National2NarrowWeb-Bold.woff2') format('woff2');
-	font-weight: 700;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
-
-/*
-@font-face {
-	font-family: 'National 2 Narrow Web';
-	src: url('https://pudding.cool/assets/fonts/national/National2NarrowWeb-Black.woff2') format('woff2');
-	font-weight: 900;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
-*/
-
-/*
-********************
-	Tiempos Text
-********************
-*/
-
-@font-face {
-	font-family: 'Tiempos Text Web';
-	src: url('https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Regular.woff2') format('woff2');
-	font-weight: 500;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
-
-@font-face {
-	font-family: 'Tiempos Text Web';
-	src: url('https://pudding.cool/assets/fonts/tiempos/TiemposTextWeb-Bold.woff2') format('woff2');
-	font-weight: 700;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
-
-/*
-********************
-	Tiempos Headline
-********************
-*/
-
-/*
-@font-face {
-	font-family: 'Tiempos Headline Web';
-	src: url('https://pudding.cool/assets/fonts/tiempos/TiemposHeadlineWeb-Regular.woff2') format('woff2');
-	font-weight: 500;
-	font-style: normal;
-	font-stretch: normal;
-	font-display: swap;
-}
-*/
