--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -18,8 +18,7 @@
 
 @font-face {
 	font-family: 'National 2 Web';
-	src: url('/assets/fonts/national/National2Web-Regular.woff2') format('woff2'),
-	url('/assets/fonts/national/National2Web-Regular.woff') format('woff');
+	src: url('https://pudding.cool/assets/fonts/national/National2Web-Regular.woff2') format('woff2');
 	font-weight: 500;
 	font-style: normal;
 	font-stretch: normal;
@@ -28,8 +27,7 @@
 
 @font-face {
 	font-family: 'National 2 Web';
-	src: url('/assets/fonts/national/National2Web-Bold.woff2') format('woff2'),
-	url('/assets/fonts/national/National2Web-Bold.woff') format('woff');
+	src: url('https://pudding.cool/assets/fonts/national/National2Web-Bold.woff2') format('woff2');
 	font-weight: 700;
 	font-style: normal;
 	font-stretch: normal;
@@ -38,8 +36,7 @@
 
 @font-face {
 	font-family: 'Recoleta Regular';
-	src: url('assets/fonts/recoleta/recoleta.woff2') format('woff2'),
-	url('assets/fonts/recoleta/recoleta.woff') format('woff');
+	src: url('https://pudding.cool/assets/fonts/recoleta/recoleta.woff2') format('woff2');
 	font-weight: 500;
 	font-style: normal;
 	font-stretch: normal;
